# robot_calculator

./: README.md  license
ur_moveit_config/: .setup_assistant  package.xml
ur_moveit_config/config/: fake_controllers.yaml  gazebo_ur3e_robot.urdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  ur3e_robot.srdf
ur_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  gazebo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml
ur_scripts/: CMakeLists.txt  package.xml
ur_scripts/launch/: fullsimsuite.launch
ur_scripts/src/: calculator.py  environment.scene
